load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "error",
    srcs = ["error.cpp"],
    hdrs = ["error.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//base/util:disablecopy",
        "@abseil//absl/strings",
    ],
)

cc_test(
    name = "error_test",
    srcs = ["error_test.cpp"],
    deps = [
        ":error",
        "//external:gtest_main",
    ],
)
