load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "init_registry",
    srcs = [
        "init_registry.cpp",
    ],
    hdrs = [
        "init_registry.hpp",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//base/types:error",
        "//base/zlog",
        "@abseil//absl/types:any",
    ],
)

cc_test(
    name = "init_registry_test",
    srcs = [
        "init_registry_test.cpp",
    ],
    deps = [
        ":init_registry",
        "//base/zlog:zlog_to_console",
        "//external:gtest_main",
    ],
)
