load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load(":build_setting.bzl", "get_zlog_copts_all", "get_zlog_copts_config", "parse_zlog_copts_config")

zlog_srcs = [
    "console_appender.cpp",
    "zlog.cpp",
]

zlog_hdrs = [
    "console_appender.h",
    "preprocessor.h",
    "zlog.h",
]

parse_zlog_copts_config()

zlog_copts_config = get_zlog_copts_config()

cc_library(
    name = "zlog_configurable",
    srcs = zlog_srcs,
    hdrs = zlog_hdrs,
    copts = zlog_copts_config,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "zlog",
    srcs = zlog_srcs,
    hdrs = zlog_hdrs,
    copts = get_zlog_copts_all(),
    visibility = ["//visibility:public"],
)

cc_test(
    name = "zlog_test",
    srcs = ["zlog_test.cpp"],
    deps = [
        ":zlog_configurable",
    ],
)
