load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

zlog_srcs = [
    "console_appender.cpp",
    "zlog.cpp",
]

zlog_hdrs = [
    "console_appender.h",
    "preprocessor.h",
    "zlog.h",
]

cc_library(
    name = "zlog",
    srcs = zlog_srcs,
    hdrs = zlog_hdrs,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "zlog_to_console",
    srcs = ["zlog_to_console.cpp"],
    hdrs = ["zlog_to_console.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":zlog",
    ],
)

cc_test(
    name = "zlog_test",
    srcs = ["zlog_test.cpp"],
    deps = [
        ":zlog",
        "//base/util:common",
    ],
)

cc_test(
    name = "zlog_test_with_string_view",
    srcs = ["zlog_test.cpp"],
    copts = [
        "-DENABLE_STRING_VIEW",
    ],
    deps = [
        ":zlog",
        "//base/util:common",
    ],
)

cc_test(
    name = "zlog_to_console_test",
    srcs = ["zlog_to_console_test.cpp"],
    deps = [
        ":zlog_to_console",
    ],
)
